// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Codegen Templates > renders Badge template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const badgeVariants = cva(
  "inline-flex items-center justify-center font-medium bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface BadgeProps
  extends React.HTMLAttributes<HTMLSpanElement>,
    VariantProps<typeof badgeVariants> {}

export function Badge({ className, variant, size, children, ref, ...props }: BadgeProps & { ref?: React.Ref<HTMLSpanElement> }) {
  return (
    <span ref={ref} role="status" className={cn(badgeVariants({ variant, size }), className)} {...props}>
      {children}
    </span>
  );
}
"
`;

exports[`Component Codegen Templates > renders Button template (React 18) 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const buttonVariants = cva(
  "inline-flex items-center justify-center cursor-pointer transition-colors focus-visible:outline-none disabled:pointer-events-none bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface ButtonProps
  extends React.ButtonHTMLAttributes<HTMLButtonElement>,
    VariantProps<typeof buttonVariants> {
  leftIcon?: React.ReactNode;
  rightIcon?: React.ReactNode;
  loading?: boolean;
}

export const Button = React.forwardRef<HTMLButtonElement, ButtonProps>(
  ({ className, variant, size, leftIcon, rightIcon, loading = false, disabled, children, type = 'button', ...props }, ref) => {
    return (
      <button
        ref={ref}
        type={type}
        disabled={disabled || loading}
        data-loading={loading ? 'true' : undefined}
        className={cn(buttonVariants({ variant, size }), className)}
        {...props}
      >
        {leftIcon && <span className="mr-2 inline-flex items-center shrink-0">{leftIcon}</span>}
        {children}
        {rightIcon && <span className="ml-2 inline-flex items-center shrink-0">{rightIcon}</span>}
      </button>
    );
  }
);
Button.displayName = 'Button';
"
`;

exports[`Component Codegen Templates > renders Button template (React 19) 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const buttonVariants = cva(
  "inline-flex items-center justify-center cursor-pointer transition-colors focus-visible:outline-none disabled:pointer-events-none bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface ButtonProps
  extends React.ButtonHTMLAttributes<HTMLButtonElement>,
    VariantProps<typeof buttonVariants> {
  leftIcon?: React.ReactNode;
  rightIcon?: React.ReactNode;
  loading?: boolean;
}

export function Button({
  className,
  variant, size, leftIcon,
  rightIcon,
  loading = false,
  disabled,
  children,
  type = 'button',
  ref,
  ...props
}: ButtonProps & { ref?: React.Ref<HTMLButtonElement> }) {
  return (
    <button
      ref={ref}
      type={type}
      disabled={disabled || loading}
      data-loading={loading ? 'true' : undefined}
      className={cn(buttonVariants({ variant, size }), className)}
      {...props}
    >
      {leftIcon && <span className="mr-2 inline-flex items-center shrink-0">{leftIcon}</span>}
      {children}
      {rightIcon && <span className="ml-2 inline-flex items-center shrink-0">{rightIcon}</span>}
    </button>
  );
}
"
`;

exports[`Component Codegen Templates > renders Card template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const cardVariants = cva(
  "overflow-hidden transition-shadow bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface CardProps
  extends React.HTMLAttributes<HTMLDivElement>,
    VariantProps<typeof cardVariants> {
  header?: React.ReactNode;
  footer?: React.ReactNode;
}

export function Card({ className, variant, size, header, footer, children, ref, ...props }: CardProps & { ref?: React.Ref<HTMLDivElement> }) {
  return (
    <div ref={ref}  className={cn(cardVariants({ variant, size }), className)} {...props}>
      {header && <div className="border-b border-border p-4 font-semibold">{header}</div>}
      <div className="p-4">{children}</div>
      {footer && <div className="border-t border-border p-4">{footer}</div>}
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Checkbox template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const checkboxVariants = cva(
  "h-4 w-4 rounded border border-primary text-primary focus:ring-2 focus:ring-primary disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface CheckboxProps
  extends Omit<React.InputHTMLAttributes<HTMLInputElement>, 'type'>,
    VariantProps<typeof checkboxVariants> {
  label?: React.ReactNode;
}

export function Checkbox({ className, variant, size, label, children, id, ref, ...props }: CheckboxProps & { ref?: React.Ref<HTMLInputElement> }) {
  const generatedId = React.useId();
  const checkboxId = id || generatedId;

  return (
    <label htmlFor={checkboxId} className="inline-flex items-center gap-2 cursor-pointer select-none">
      <input
        ref={ref}
        id={checkboxId}
        type="checkbox"
        className={cn(checkboxVariants({ variant, size }), className)}
        {...props}
      />
      {(label || children) && <span className="text-sm font-medium text-foreground">{label || children}</span>}
    </label>
  );
}
"
`;

exports[`Component Codegen Templates > renders Generic Shell template for unknown component with agent comment 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
// frame-relay: generated shell. Agent: refine using .frame-relay/components.md and the screenshots.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const heroBannerVariants = cva(
  "bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface HeroBannerProps
  extends React.HTMLAttributes<HTMLDivElement>,
    VariantProps<typeof heroBannerVariants> {}

export function HeroBanner({ className, variant, size, children, ref, ...props }: HeroBannerProps & { ref?: React.Ref<HTMLDivElement> }) {
  return (
    <div ref={ref}  className={cn(heroBannerVariants({ variant, size }), className)} {...props}>
      {children}
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Input template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const inputVariants = cva(
  "flex w-full transition-colors focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface InputProps
  extends Omit<React.InputHTMLAttributes<HTMLInputElement>, 'size'>,
    VariantProps<typeof inputVariants> {
  label?: string;
  helperText?: string;
  error?: boolean | string;
  leftIcon?: React.ReactNode;
  rightIcon?: React.ReactNode;
}

export function Input({
  className,
  type = 'text',
  variant, size, label,
  helperText,
  error,
  leftIcon,
  rightIcon,
  disabled,
  id,
  ref,
  ...props
}: InputProps & { ref?: React.Ref<HTMLInputElement> }) {
  const generatedId = React.useId();
  const inputId = id || generatedId;
  const isError = Boolean(error);
  const errorMessage = typeof error === 'string' ? error : helperText;

  return (
    <div className="flex flex-col gap-1.5 w-full">
      {label && (
        <label htmlFor={inputId} className="text-sm font-medium text-foreground">
          {label}
        </label>
      )}
      <div className="relative flex items-center w-full">
        {leftIcon && (
          <span className="absolute left-3 inline-flex items-center pointer-events-none text-muted-foreground">
            {leftIcon}
          </span>
        )}
        <input
          ref={ref}
          id={inputId}
          type={type}
          disabled={disabled}
          aria-invalid={isError ? 'true' : undefined}
          className={cn(
            inputVariants({ variant, size }),
            leftIcon && 'pl-10',
            rightIcon && 'pr-10',
            className
          )}
          {...props}
        />
        {rightIcon && (
          <span className="absolute right-3 inline-flex items-center pointer-events-none text-muted-foreground">
            {rightIcon}
          </span>
        )}
      </div>
      {errorMessage && (
        <p className={cn('text-xs', isError ? 'text-destructive' : 'text-muted-foreground')}>
          {errorMessage}
        </p>
      )}
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Modal template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const modalVariants = cva(
  "fixed left-[50%] top-[50%] z-50 grid w-full max-w-lg translate-x-[-50%] translate-y-[-50%] gap-4 border bg-background p-6 shadow-lg duration-200 sm:rounded-lg bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface ModalProps
  extends React.HTMLAttributes<HTMLDivElement>,
    VariantProps<typeof modalVariants> {
  open?: boolean;
  onClose?: () => void;
  title?: React.ReactNode;
}

export function Modal({ className, variant, size, open = false, onClose, title, children, ref, ...props }: ModalProps & { ref?: React.Ref<HTMLDivElement> }) {
  if (!open) return null;

  return (
    <div className="fixed inset-0 z-50 flex items-center justify-center">
      <div className="fixed inset-0 bg-black/50 backdrop-blur-sm transition-opacity" onClick={onClose} />
      <div ref={ref} role="dialog" aria-modal="true" className={cn(modalVariants({ variant, size }), className)} {...props}>
        {title && <h2 className="text-lg font-semibold leading-none tracking-tight">{title}</h2>}
        {children}
      </div>
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Radio template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const radioVariants = cva(
  "h-4 w-4 rounded-full border border-primary text-primary focus:ring-2 focus:ring-primary disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface RadioProps
  extends Omit<React.InputHTMLAttributes<HTMLInputElement>, 'type'>,
    VariantProps<typeof radioVariants> {
  label?: React.ReactNode;
}

export function Radio({ className, variant, size, label, children, id, ref, ...props }: RadioProps & { ref?: React.Ref<HTMLInputElement> }) {
  const generatedId = React.useId();
  const radioId = id || generatedId;

  return (
    <label htmlFor={radioId} className="inline-flex items-center gap-2 cursor-pointer select-none">
      <input
        ref={ref}
        id={radioId}
        type="radio"
        className={cn(radioVariants({ variant, size }), className)}
        {...props}
      />
      {(label || children) && <span className="text-sm font-medium text-foreground">{label || children}</span>}
    </label>
  );
}
"
`;

exports[`Component Codegen Templates > renders Select template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const selectVariants = cva(
  "flex w-full cursor-pointer focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface SelectProps
  extends Omit<React.SelectHTMLAttributes<HTMLSelectElement>, 'size'>,
    VariantProps<typeof selectVariants> {
  label?: string;
  helperText?: string;
  error?: boolean | string;
}

export function Select({ className, variant, size, label, helperText, error, children, id, ref, ...props }: SelectProps & { ref?: React.Ref<HTMLSelectElement> }) {
  const generatedId = React.useId();
  const selectId = id || generatedId;
  const isError = Boolean(error);
  const errorMessage = typeof error === 'string' ? error : helperText;

  return (
    <div className="flex flex-col gap-1.5 w-full">
      {label && <label htmlFor={selectId} className="text-sm font-medium text-foreground">{label}</label>}
      <select ref={ref} id={selectId} aria-invalid={isError ? 'true' : undefined} className={cn(selectVariants({ variant, size }), className)} {...props}>
        {children}
      </select>
      {errorMessage && <p className={cn('text-xs', isError ? 'text-destructive' : 'text-muted-foreground')}>{errorMessage}</p>}
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Switch template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const switchVariants = cva(
  "inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface SwitchProps
  extends Omit<React.ButtonHTMLAttributes<HTMLButtonElement>, 'onChange'>,
    VariantProps<typeof switchVariants> {
  checked?: boolean;
  onCheckedChange?: (checked: boolean) => void;
  label?: React.ReactNode;
}

export function Switch({
  className,
  variant, size, checked = false,
  onCheckedChange,
  disabled,
  label,
  ref,
  ...props
}: SwitchProps & { ref?: React.Ref<HTMLButtonElement> }) {
  const [internalChecked, setInternalChecked] = React.useState(checked);
  const isControlled = props.checked !== undefined;
  const activeChecked = isControlled ? checked : internalChecked;

  const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
    if (disabled) return;
    const next = !activeChecked;
    if (!isControlled) setInternalChecked(next);
    onCheckedChange?.(next);
    props.onClick?.(e);
  };

  const button = (
    <button
      ref={ref}
      type="button"
      role="switch"
      aria-checked={activeChecked}
      disabled={disabled}
      onClick={handleClick}
      className={cn(
        switchVariants({ variant, size }),
        activeChecked ? 'bg-primary' : 'bg-input',
        className
      )}
      {...props}
    >
      <span
        className={cn(
          'pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform',
          activeChecked ? 'translate-x-5' : 'translate-x-0'
        )}
      />
    </button>
  );

  if (label) {
    return (
      <label className="inline-flex items-center gap-2 cursor-pointer select-none">
        {button}
        <span className="text-sm font-medium text-foreground">{label}</span>
      </label>
    );
  }

  return button;
}
"
`;

exports[`Component Codegen Templates > renders Tabs template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const tabsVariants = cva(
  "inline-flex items-center justify-center rounded-md bg-muted p-1 text-muted-foreground bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface TabsProps
  extends React.HTMLAttributes<HTMLDivElement>,
    VariantProps<typeof tabsVariants> {
  value?: string;
  onValueChange?: (val: string) => void;
}

export function Tabs({ className, variant, size, value, onValueChange, children, ref, ...props }: TabsProps & { ref?: React.Ref<HTMLDivElement> }) {
  return (
    <div ref={ref} role="tablist" className={cn(tabsVariants({ variant, size }), className)} {...props}>
      {children}
    </div>
  );
}
"
`;

exports[`Component Codegen Templates > renders Textarea template 1`] = `
"// Generated by Frame-Relay from TestKit, exported 2026-10-04T00:00:00Z. Safe to edit. Sync keeps your changes.
import * as React from 'react';
import { cva, type VariantProps } from 'class-variance-authority';
import { cn } from '@/lib/cn';

export const textareaVariants = cva(
  "flex w-full min-h-[80px] focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 bg-primary-500 hover:bg-primary-600",
  {
    variants: {
    variant: {
      "Primary": "",
      "Secondary": "bg-neutral-200",
    },
    size: {
      "Small": "",
      "Medium": "",
      "Large": "",
    },
    },
    defaultVariants: {
      variant: "Primary",
      size: "Medium",
    },
  },
);

export interface TextareaProps
  extends React.TextareaHTMLAttributes<HTMLTextAreaElement>,
    VariantProps<typeof textareaVariants> {
  label?: string;
  helperText?: string;
  error?: boolean | string;
}

export function Textarea({ className, variant, size, label, helperText, error, disabled, id, ref, ...props }: TextareaProps & { ref?: React.Ref<HTMLTextAreaElement> }) {
  const generatedId = React.useId();
  const inputId = id || generatedId;
  const isError = Boolean(error);
  const errorMessage = typeof error === 'string' ? error : helperText;

  return (
    <div className="flex flex-col gap-1.5 w-full">
      {label && <label htmlFor={inputId} className="text-sm font-medium text-foreground">{label}</label>}
      <textarea
        ref={ref}
        id={inputId}
        disabled={disabled}
        aria-invalid={isError ? 'true' : undefined}
        className={cn(textareaVariants({ variant, size }), className)}
        {...props}
      />
      {errorMessage && <p className={cn('text-xs', isError ? 'text-destructive' : 'text-muted-foreground')}>{errorMessage}</p>}
    </div>
  );
}
"
`;
